# sorlc

./: .gitignore  README.md  pyproject.toml
agent/: base_agent.py  human_agent.py  minmax_agent.py  random_agent.py
chess_env/: board.py  evaluation.py  renderer.py  rules.py
envs/: base_env.py  chess_env.py
envs/chess_env/: __init__.py  board.py  chess_env.py  evaluation.py  rules.py
examples/: game.py  oenv_game.py
oenv/: model.py
oenv/client/: chess_oenv_client.py
oenv/server/: app.py  chess_oenv.py
tests/: test_board.py  test_infra.py
ui/: chess_tk.py
